# microvecdb

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists_old.txt  README.md  main.c  main.cpp
.github/workflows/: cmake-single-platform.yml
.github/workflows_old/: cmake-single-platform.yml
SPTAG/: .gitignore  CMakeLists.txt  buildconfig.ini
SPTAG/AnnService/: CMakeLists.txt
SPTAG/AnnService/inc/Core/: Common.h
SPTAG/AnnService/inc/Core/Common/: BKTree.h  DistanceUtils.h  InstructionUtils.h  KDTree.h  RelativeNeighborhoodGraph.h  SIMDUtils.h
SPTAG/AnnService/inc/Core/SPANN/: Compressor.h
SPTAG/AnnService/src/Core/BKT/: BKTIndex.cpp
SPTAG/AnnService/src/Core/Common/: DistanceUtils.cpp  InstructionUtils.cpp  SIMDUtils.cpp
SPTAG/AnnService/src/Core/KDT/: KDTIndex.cpp
SPTAG/Release/aarch64/lib/: libzstd.so.1.5.2
SPTAG/Wrappers/inc/: ClientInterface_pwrap.cpp  CoreInterface_pwrap.cpp  SPTAG.py
SPTAG/zstd_aarch64/: .BUILDINFO  .PKGINFO  zstd-1.5.5-1-aarch64.pkg.tar
SPTAG/zstd_aarch64/usr/lib/cmake/zstd/: zstdConfig.cmake  zstdTargets.cmake
annoy/: annoylib.h
benchmarks/: CMakeLists.txt  benchmark.sh
benchmarks/benchmarks_src/: distance_metrics.cpp  index.cpp
benchmarks/index/: distance_metrics_benchmarks.cpp
demo/: main.py  profile.txt  test_index
fasttext/src/: vector.h
include/: RocksDBDatabase.h  cli.h  confluxindex.h  confluxstorage.h  constants.h  constants.hpp  db.h  db_object.h  exception.h  fastttext_c.h  index_engine.h  kv_store.h  kv_store.hpp  metadata.h  metadata.hpp  microvecdb.h  microvecdb.hpp  microvecdb_c.h  micrvecdb.h  micrvecdb.hpp  mvdb.h  mvdb.hpp  mvdb.i  preprocess.h  quantization.h  serializable.h  serializable.hpp  storage_engine.h  storage_manager.h  tests.h  utils.h  utils.hpp  vector_collection.h  vector_collection.hpp  vector_db.h  vector_db.hpp  vector_index.h  vector_index.hpp  vectorizer.h  vectorizer.hpp
include/core/: aligned_vector.h  args.h  constants.h  db.h  filesystem.h  kmeans.h  mvdb.h  preprocess.h  quantization.h  serializable.h  server.h  settings.h  utils.h  wal.h  wal_old.h
include/index/: annoy_index.h  diskann_index.h  distances.h  faiss_flat_index.h  faiss_hnsw_index.h  faiss_ivf_index.h  faiss_pq_index.h  flat_index.h  heap.h  index.h  index.hpp  kmeans.h  knn.h  schema.h  spann_index.h  vector.h  vector_index.hpp
include/interface/: interface.h
include/operators/: operators.h
include/storage/: kv_store.h  kv_store.hpp  storage.h
include/unused/: diskann_index.h  distances.h  kmeans.h  knn.h  metrics.h  pq_lookup.h  preprocess.h  quantization.h
include/vectorizer/: vectorizer.h
jetson/: CMakeLists.txt  create_sysroot.sh  create_sysroot_on_device.sh  make.sh  old_create_sysroot.sh  transfer.sh
jetson/lib/SPTAG_aarch64/: indexbuilder  indexsearcher  quantizer  ssdserving
jetson/lib/faiss_aarch64/: control.tar.zst  data.tar.zst  libfaiss-dev_1.7.4-3_arm64.deb
jetson/lib/faiss_aarch64/usr/include/faiss/: Index.h
jetson/lib/faiss_aarch64/usr/lib/aarch64-linux-gnu/cmake/faiss/: faiss-targets-none.cmake  faiss-targets.cmake
jetson/python/: pymicrovecdb.sh  requirements.txt  setup.py  testing.py
jetson/python/test/: testing.py
python/: MANIFEST.in  MicroVecDB.py  benchmark.py  benchmark_setup.py  builder.py  ca.py  db_builder.py  experiments.py  microvecdb_py.cpp  microvecdb_py.py  nano_utils.py  pymicrovecdb.cpp  pymicrovecdb.sh  setup.py  testing.py  utils.py
python/benchmark/: benchmark.py  builder.py  nano_utils.py  results.ipynb  setup_bench.py
python/case_study/: buildconfig.ini  facial_recognition.py
python/case_study/lfw/: tree.txt
python/nni/: annoy_autotune_results.csv  annoy_config.yml  annoy_experiment.py  annoy_search_space.json  buildconfig.ini  spann_config.yml  spann_experiment.py  spann_search_space.json
python/pymicrovecdb/: DB.py  __init__.py  main.py  mvdb.py  utils.py
src/: RocksDBDatabase.cpp  cli.cpp  confluxstorage.cpp  db.cpp  db_object.cpp  fastttext_c.cpp  kv_store.c  kv_store.cpp  metadata.cpp  microvecdb.cpp  microvecdb_c.cpp  mvdb.cpp  utils.c  utils.cpp  vector_collection.c  vector_collection.cpp  vector_db.c  vector_db.cpp  vector_index.c  vector_index.cpp  vectorizer.cpp
src/core/: db.cpp  mvdb.cpp  preprocess.cpp  quantization.cpp  server.cpp  utils.cpp  wal.cpp
src/index/: annoy_index.cpp  diskann_index.cpp  distances.cpp  faiss_flat_index.cpp  flat_index.cpp  index.cpp  kmeans.cpp  knn.cpp  spann_index.cpp
src/operators/: operators.cpp
src/storage/: kv_store.cpp  storage.cpp
src/unused/: cli.cpp  diskann_index.cpp  distances.cpp  flat_index.cpp  kmeans.cpp  knn.cpp
src/vectorizer/: vectorizer.cpp
tests/: CMakeLists.txt  index_tests.cpp  tests.cpp
tests/index/: faiss_flat_index_tests.cpp  flat_index_tests.cpp
